argocd/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd 
  namespace: argocd
spec:
  hosts:
    - "argocd.schaefersm.com" 
  gateways:
    - argocd-gateway
  http:
  -  route:
     - destination:
         host: argocd-server
         port:
           number: 80
